# microservices-rust-pdf

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: auth.rs  config.rs  main.rs  rasterize.rs
