[package]
name = "authentiq-pdf-service"
version = "0.1.0"
edition = "2021"
description = "Microservice Rust — rasterisation PDF rapide pour Authentiq"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
