[package]
name = "authentiq-pdf-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Microservice Rust — rasterisation PDF rapide pour Authentiq"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "limit"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
